[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "seed_everything"
version = "0.1.0"
description = "Comprehensive seeding for reproducible ML training across all major frameworks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "seed_everything contributors"}
]
keywords = ["seed", "random", "reproducibility", "machine-learning", "deep-learning", "pytorch", "tensorflow", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
numpy = ["numpy>=1.17.0"]
torch = ["torch>=1.7.0"]
tensorflow = ["tensorflow>=2.0.0"]
jax = ["jax>=0.2.0", "jaxlib>=0.1.0"]
sklearn = ["scikit-learn>=0.24.0", "numpy>=1.17.0"]
distributed = ["torch>=1.7.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]
all = [
    "numpy>=1.17.0",
    "torch>=1.7.0",
    "tensorflow>=2.0.0",
    "jax>=0.2.0",
    "jaxlib>=0.1.0",
    "scikit-learn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yuv4r4j/seed_everything"
Repository = "https://github.com/yuv4r4j/seed_everything"
Issues = "https://github.com/yuv4r4j/seed_everything/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
